--- a/Images/index.html
+++ b/Images/index.html
@@ -28,42 +28,6 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/cathedralEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/monasteryEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</figcaption></td>
-                </tr>
-            </table>
-         </div>
-        <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/nativityEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/settlersEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
                     <img src="img/emirEdgeColored.jpg" width="720px" />
                     <figcaption align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</figcaption></td>
                 </tr>
@@ -186,6 +150,42 @@
                 </tr>
             </table>
          </div>
+         <div class="slide fade">
+            <table style="width=100%">
+                <tr>
+                    <td align="middle">
+                    <img src="img/cathedralEdgeColored.jpg" width="720px" />
+                    <figcaption align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</figcaption></td>
+                </tr>
+            </table>
+         </div>
+         <div class="slide fade">
+            <table style="width=100%">
+                <tr>
+                    <td align="middle">
+                    <img src="img/monasteryEdgeColored.jpg" width="720px" />
+                    <figcaption align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</figcaption></td>
+                </tr>
+            </table>
+         </div>
+        <div class="slide fade">
+            <table style="width=100%">
+                <tr>
+                    <td align="middle">
+                    <img src="img/nativityEdgeColored.jpg" width="720px" />
+                    <figcaption align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</figcaption></td>
+                </tr>
+            </table>
+         </div>
+         <div class="slide fade">
+            <table style="width=100%">
+                <tr>
+                    <td align="middle">
+                    <img src="img/settlersEdgeColored.jpg" width="720px" />
+                    <figcaption align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</figcaption></td>
+                </tr>
+            </table>
+         </div>
          <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
         </div>
@@ -201,35 +201,27 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/cathedralBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 1: all pixels of cathedral.jpg: R:[ 7 -1] G:[ 1 -1] TIME:0.618376016617</figcaption></td>
-                    <td align="middle">
-                    <img src="img/cathedralNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 2: middle 50% of pixels of cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
                     <img src="img/monasteryBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 3: all pixels of monastery.jpg: R:[8 1] G:[-6  0] TIME:0.565473079681</figcaption></td>
+                    <figcaption align="middle">Figure 1: all pixels of monastery.jpg: R:[8 1] G:[-6  0] TIME:0.565473079681</figcaption></td>
                     <td align="middle">
                     <img src="img/monasteryNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 4: middle 50% of pixels monastery.jpg: R:[2 2] G:[-3  2] TIME:0.41522693634</figcaption></td>
+                    <figcaption align="middle">Figure 2: middle 50% of pixels monastery.jpg: R:[2 2] G:[-3  2] TIME:0.41522693634</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
                     <img src="img/nativityBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 5: all pixels of nativity.jpg: R:[7 1] G:[4 1] TIME:0.594136953354</figcaption></td>
+                    <figcaption align="middle">Figure 3: all pixels of nativity.jpg: R:[7 1] G:[4 1] TIME:0.594136953354</figcaption></td>
                     <td align="middle">
                     <img src="img/nativityNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 6: middle 50% of pixels nativity.jpg: R:[8 0] G:[3 1] TIME:0.450391054153</figcaption></td>
+                    <figcaption align="middle">Figure 4: middle 50% of pixels nativity.jpg: R:[8 0] G:[3 1] TIME:0.450391054153</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
                     <img src="img/settlersBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 7: all pixels of settlers.jpg: R:[14 -1] G:[7 0] TIME:0.823676109314</figcaption></td>
+                    <figcaption align="middle">Figure 5: all pixels of settlers.jpg: R:[14 -1] G:[7 0] TIME:0.823676109314</figcaption></td>
                     <td align="middle">
                     <img src="img/settlersNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 8: middle 50% of pixels settlers.jpg: R:[14 -1] G:[7 0] TIME:0.405462026596</figcaption></td>
+                    <figcaption align="middle">Figure 6: middle 50% of pixels settlers.jpg: R:[14 -1] G:[7 0] TIME:0.405462026596</figcaption></td>
                 </tr>
             </table>
         </div>
@@ -242,89 +234,41 @@
                 <tr>
                     <td align="middle">
                     <img src="img/cathedralTimeColored.jpg" width="500px"/>
-                    <figcaption align="middle">Figure 9: Naive cathedral.jpg: R:[12  3] G:[5 2] TIME:2.9832880497.</figcaption></td>
+                    <figcaption align="middle">Figure 7: Naive cathedral.jpg: R:[12  3] G:[5 2] TIME:2.9832880497.</figcaption></td>
                     <td align="middle">
                     <img src="img/cathedralNaiveColored.jpg" width="500px"/>
-                    <figcaption align="middle">Figure 10: Image Pyramid cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139.</figcaption></td>
+                    <figcaption align="middle">Figure 8: Image Pyramid cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139.</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
                     <img src="img/iconTimeColored.jpg" width="500px"/>
-                    <figcaption align="middle">Figure 11: Naive icon.tif: R:[15 12] G:[15 14] TIME:316.376515865.</figcaption></td>
+                    <figcaption align="middle">Figure 9: Naive icon.tif: R:[15 12] G:[15 14] TIME:316.376515865.</figcaption></td>
                     <td align="middle">
                     <img src="img/iconNaiveColored.jpg" width="500px"/>
-                    <figcaption align="middle">Figure 12: Image Pyramid icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</figcaption></td>
+                    <figcaption align="middle">Figure 10: Image Pyramid icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</figcaption></td>
                 </tr>
             </table>
         </div>
             <p>The time to align and color smaller images with the Image Pyramid is about 2.3 seconds less than before, but the time difference in the larger images is about 300 seconds and because our displacement values are [-15,15], then the best alignment can't be calculated. Making the displacement values even larger would make the time to align larger images even worse.</p>
-            <p>The following are the larger images that used the Image Pyramid algorithm. The left images (odd figures), just like the NCC section, are results when doing NCC on the whole the whole image while the right images(even Figures) are results when doing NCC in the middle 50% of the images. </p>
+            <p>The following are the larger images that used the Image Pyramid algorithm. </p>
 
         <div align="center">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/harvestersBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 13: all pixels of harvesters.tif: R:[120   7] G:[118  -3] TIME:14.3462030888</figcaption></td>
-                    <td align="middle">
-                    <img src="img/harvestersNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 14: middle 50% of pixels of harvesters.tif: R:[123  14] G:[59 17] TIME:14.4695467949</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/iconBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 15: all pixels of icon.tif: R:[89 22] G:[42 16] TIME:15.2267930508</figcaption></td>
-                    <td align="middle">
-                    <img src="img/iconNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 16: middle 50% of pixels icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/ladyBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 17: all pixels of lady.tif: R:[110 -17] G:[57 -6] TIME:15.1451718807</figcaption></td>
-                    <td align="middle">
-                    <img src="img/ladyNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 18: middle 50% of pixels lady.tif: R:[116  11] G:[54  8] TIME:13.4753639698</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/self_portraitBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 19: all pixels of self_portrait.tif: R:[130  -5] G:[50 -2] TIME:16.9582078457</figcaption></td>
-                    <td align="middle">
                     <img src="img/self_portraitNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 20: middle 50% of pixels self_portrait.tif: R:[175  37] G:[78 29] TIME:13.4188771248</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/three_generationsBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 21: all pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</figcaption></td>
+                    <figcaption align="middle">Figure 1: middle 50% of pixels self_portrait.tif: R:[175  37] G:[78 29] TIME:13.4188771248</figcaption></td>
                     <td align="middle">
                     <img src="img/three_generationsNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 22: middle 50% of pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</figcaption></td>
+                    <figcaption align="middle">Figure 12: middle 50% of pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</figcaption></td>
                 </tr>
                 <tr>
-                    <td align="middle">
-                    <img src="img/trainBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 23: all pixels of train.tif: R:[106   1] G:[41 -2] TIME:14.7234559059</figcaption></td>
-                    <td align="middle">
-                    <img src="img/trainNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 24: middle 50% of pixels train.tif: R:[86 32] G:[42  6] TIME:11.5949559212</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/turkmenBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 25: all pixels of turkmen.tif: R:[78  0] G:[57  4] TIME:14.4813129902</figcaption></td>
                     <td align="middle">
                     <img src="img/turkmenNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 26: middle 50% of pixels turkmen.tif: R:[116  28] G:[55 21] TIME:13.3178520203</figcaption></td>
-                </tr>
-                <tr>
-                    <td align="middle">
-                    <img src="img/villageBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 27: all pixels of village.tif: R:[118 -15] G:[144  -7] TIME:15.3827118874</figcaption></td>
+                    <figcaption align="middle">Figure 13: middle 50% of pixels turkmen.tif: R:[116  28] G:[55 21] TIME:13.3178520203</figcaption></td>
                     <td align="middle">
                     <img src="img/villageNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 28: middle 50% of pixels village.tif: R:[137  22] G:[64 12] TIME:15.6597101688</figcaption></td>
+                    <figcaption align="middle">Figure 14: middle 50% of pixels village.tif: R:[137  22] G:[64 12] TIME:15.6597101688</figcaption></td>
                 </tr>
             </table>
         </div>
@@ -335,17 +279,17 @@
                 <tr>
                     <td align="middle">
                     <img src="img/emirBasicColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 30: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</figcaption></td>
+                    <figcaption align="middle">Figure 15: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</figcaption></td>
                     <td align="middle">
                     <img src="img/emirNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 31: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</figcaption></td>
+                    <figcaption align="middle">Figure 16: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</figcaption></td>
                 </tr>
             </table>
             <table style="width=100%">
                 <tr>
                     <td align="middle">
                     <img src="img/emirEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">Figure 32: canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</figcaption></td>
+                    <figcaption align="middle">Figure 17: canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</figcaption></td>
                 </tr>
             </table>
         </div>
