--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p>Software/Graphics Engineer<br/>Electrical Engineer and Computer Science Undergrad<br/>University of California, Berkeley</p>
+                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>EECS Graduate at University of California, Berkeley</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a senior at the University of California, Berkeley as an electrical engineering and computer science major. I'm am still actively looking at all areas of computer science to find where I want to focus my career around. Some topics I've really enjoyed so far is Artificial Intelligence, Computer Graphics, and Animation. All my technical skills are in my résumé in the section below. Some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California, I am a Render Technical Assistant at Industrial Ligh & Magic, and I graduated from the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science in December 2017. Some topics I've really enjoyed so far is Computer Graphics, Animation, VFX, and Artificial Intelligence. All my technical skills are in my résumé in the section below. Some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                     </a>
                 </div>
                  <div class="col-lg-4 col-sm-6">
-                    <a href="uccc2018.com" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="http://uccc2018.com" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -314,7 +314,7 @@
                 </div>
             </div>
         </div>
-        <p class="text-center">Last Updated: September 5, 2017</p>
+        <p class="text-center">Last Updated: April 5, 2018</p>
     </section>
 
     <!-- jQuery -->
