--- a/index.html
+++ b/index.html
@@ -205,6 +205,21 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
+                                    Image Manipulation and Computational Photography
+                                </div>
+                                <div class="project-name">
+                                    Image Warping and Mosaicing
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/autostitch.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
@@ -229,7 +244,7 @@
                         </div>
                     </a>
                 </div>
-<!--                 <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -243,7 +258,7 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://datastructur.es/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
@@ -258,7 +273,22 @@
                             </div>
                         </div>
                     </a>
-                </div> 
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/flier.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Design
+                                </div>
+                                <div class="project-name">
+                                    Photoshop and Illustrator Projects</br> images and fliers I made (To Be Inserted Soon)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 <!--                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa14/proj/scheme/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/scheme.jpg" class="img-responsive" alt="">
