updated autostich website

--- a/autostitch/index.html
+++ b/autostitch/index.html
@@ -190,6 +190,8 @@
                     <figcaption align="middle">Tahoe Sunset RANSAC weights</figcaption></td>
                 </tr>
     </table>
+    </div>
+    <div align="center">
     <table style="width=100%">
                 <tr>
                     <td align="middle">
