--- a/autostitch/index.html
+++ b/autostitch/index.html
@@ -174,7 +174,7 @@
                 <tr>
                     <td align="middle">
                     <img src="img/samples.png" width="1400px" />
-                    <figcaption align="middle">Points as results of project B</figcaption></td>
+                    <figcaption align="middle">Points as results of RANSAC</figcaption></td>
                 </tr>
             </table>
     </div>
