--- a/index.html
+++ b/index.html
@@ -109,21 +109,6 @@
         </div> -->
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="Pathtracer/index.html" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/spheres.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Computer Graphics
-                                </div>
-                                <div class="project-name">
-                                    PathTracer
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
                  <div class="col-lg-4 col-sm-6">
                     <a href="http://uccc2018.com" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/uccc2018.png" class="img-responsive" alt="">
@@ -140,15 +125,60 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/rory.jpg" class="img-responsive" alt="">
+                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/autostitch.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation
+                                    Image Manipulation and Computational Photography
                                 </div>
                                 <div class="project-name">
-                                    Stargazing (Warning: Links to a video)
+                                    Image Warping and Mosaicing
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/coloring.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Image Manipulation and Computational Photography
+                                </div>
+                                <div class="project-name">
+                                    Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="FreqsandGrads/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/freqs.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Image Manipulation and Computational Photography
+                                </div>
+                                <div class="project-name">
+                                    Frequencies and Gradients
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="Pathtracer/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/spheres.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Computer Graphics
+                                </div>
+                                <div class="project-name">
+                                    PathTracer
                                 </div>
                             </div>
                         </div>
@@ -170,36 +200,6 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/autostitch.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Image Manipulation and Computational Photography
-                                </div>
-                                <div class="project-name">
-                                    Image Warping and Mosaicing
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/coloring.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Image Manipulation and Computational Photography
-                                </div>
-                                <div class="project-name">
-                                    Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> 
-                <div class="col-lg-4 col-sm-6">
                     <a href="Rasterizester/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -214,7 +214,7 @@
                         </div>
                     </a>
                 </div>
-                 <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="GeoMenagerie/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -224,6 +224,21 @@
                                 </div>
                                 <div class="project-name">
                                     GeoMenagerie
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div> 
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/rory.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    Stargazing (Warning: Links to a video)
                                 </div>
                             </div>
                         </div>
@@ -244,7 +259,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+<!--                <div class="col-lg-4 col-sm-6">
                     <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -258,7 +273,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://datastructur.es/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
