--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <br />
-<h1 align="middle">Fun with Frequencies and Gradients! </h1>
+<h1 align="middle">Frequencies and Gradients! </h1>
     <h2 align="middle">Vincent Escueta</h2>
 
     <div class="padded">
