--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/flier.jpg" class="img-responsive" alt="">
+                        <img src="img/images.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
