--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -298,7 +298,7 @@
                                     Design
                                 </div>
                                 <div class="project-name">
-                                    Photoshop and Illustrator Projects</br> images and fliers I made (To Be Inserted Soon)
+                                    Other Minor Projects</br> Images/GIFS of nametags, fliers, models, etc of other projects I worked on
                                 </div>
                             </div>
                         </div>
