--- a/Others/index.html
+++ b/Others/index.html
@@ -46,8 +46,8 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/facebook_waterpark3.png" width="720px" />
-                    <figcaption align="middle">Facebook watermark madde in Photoshop for the University Catholic Conference of California 2018</figcaption></td>
+                    <img src="img/facebook_watermark3.png" width="720px" />
+                    <figcaption align="middle">Facebook watermark made in Photoshop for the University Catholic Conference of California 2018</figcaption></td>
                 </tr>
             </table>
          </div>
@@ -55,7 +55,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/Flyerfront.png" width="720px" />
+                    <img src="img/Flyerfront.png" width="540px" />
                     <figcaption align="middle">Front side of flyer made in Illustrator for the University Catholic Conference of California 2018</figcaption></td>
                 </tr>
             </table>
@@ -64,7 +64,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/Flyerback.png" width="720px" />
+                    <img src="img/Flyerback.png" width="540px" />
                     <figcaption align="middle">Back side of flyer made in Illustrator for the University Catholic Conference of California 2018</figcaption></td>
                 </tr>
             </table>
@@ -82,7 +82,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/snapchat.png" width="720px" />
+                    <img src="img/snapchat.png" width="540px" />
                     <figcaption align="middle">Snapchat filter made in Photoshop used for the University Catholic Conference of California 2018</figcaption></td>
                 </tr>
             </table>
@@ -100,7 +100,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/Turntable.gif.gif" width="720px" />
+                    <img src="img/Turntable.gif" width="720px" />
                     <figcaption align="middle">Cello model made in Autodesk Maya</figcaption></td>
                 </tr>
             </table>
@@ -109,80 +109,8 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/morphgifsmall.gif" width="720px" />
+                    <img src="img/morphgifsmall.gif" width="540px" />
                     <figcaption align="middle">Face morph coded in Python by plotting points, doing Delaunay triangulation, then manipulating the image through intperolation of corresponding points of the two faces.</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/telescopeEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/mozhaiskEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/peopleEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/people2EdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/cathedralEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/monasteryEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</figcaption></td>
-                </tr>
-            </table>
-         </div>
-        <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/nativityEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/settlersEdgeColored.jpg" width="720px" />
-                    <figcaption align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</figcaption></td>
                 </tr>
             </table>
          </div>
