--- a/Others/index.html
+++ b/Others/index.html
@@ -100,7 +100,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/Turntable.gif" width="720px" />
+                    <img src="img/Turnable.gif" width="720px" />
                     <figcaption align="middle">Cello model made in Autodesk Maya</figcaption></td>
                 </tr>
             </table>
