--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>EECS Graduate at University of California, Berkeley</p>
+                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS, University of California, Berkeley, 2017</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California, I am a Render Technical Assistant at Industrial Ligh & Magic, and I graduated from the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science in December 2017. Some topics I've really enjoyed so far is Computer Graphics, Animation, VFX, and Artificial Intelligence. All my technical skills are in my résumé in the section below. Some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California, I am a Render Technical Assistant at Industrial Light & Magic, and I graduated from the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science in December 2017. Some topics I've really enjoyed so far is Computer Graphics, Animation, VFX, and Artificial Intelligence. All my technical skills are in my résumé in the section below. Some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
         </div>
@@ -359,7 +359,7 @@
                 </div>
             </div>
         </div>
-        <p class="text-center">Last Updated: April 5, 2018</p>
+        <p class="text-center">Last Updated: April 24, 2018</p>
     </section>
 
     <!-- jQuery -->
