--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS, University of California, Berkeley, 2017</p>
+                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
